Unifies website style

--- a/index.html
+++ b/index.html
@@ -1,64 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width">
-		<title>Federico Ponzi's home page</title>
-		<meta name="description" content="You've found Federico Ponzi's home page">
-		<meta name="author" content="Federico Ponzi">
-		<link rel="preconnect" href="https://fonts.gstatic.com">
-		<link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-		<style>
-html {
-	box-sizing: border-box;
-	font-size: 16px;
-	font-family: 'Nunito', sans-serif;
-	letter-spacing: 1.3px;
-	background-color: #efefefef;
-}
-*, *:before, *:after {
-	box-sizing: inherit;
-}
-	body, h1, h2, h3, h4, h5, h6, p, ol, ul {
-		margin: 0;
-		padding: 0;
-		font-weight: normal;
-	}
-	article {
-		padding: 100px 50px;
-		width: auto;
-		box-sizing: border-box;
-		position: relative;
-		margin: 0 auto;
-	}
-	p {
-		padding-bottom: 10px;
-		padding-top: 10px;
-	}
-	h1 {
-		font-size: 2em;
-	}
-	h2 {
-		font-size: 1.6em;
-	}
-	ul {
-		padding-left: 25px;
-		padding-bottom: 5px;
-	}
-		</style>
-	</head>
-	<body>
-		<article>
-			<h2>You found <strong>Federico Ponzi</strong>'s home page!</h2>
-			<p>I'm a computer scientist and a software engineer interested in the intersection of Distributed Systems and Operating Systems.
-			<p>I currently work as a <strong>Software Development Engineer</strong> at <a href="https://aws.amazon.com/cloudfront/" title="AWS CloudFront">AWS CloudFront</a> on the <a href="https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/HowCloudFrontWorks.html#CloudFrontRegionaledgecaches">Regional Edge Caches</a>. 
-			<p>These days, my favorite programming languages are Rust, Java, Python. As I try to use the best tool for the job, I also know other programming and scripting languages as well.</p>
-			<p>I hold a master degree in Computer Science. During my studies, I've also published a <a title="Biopen–Fusing password choice and biometric interaction at presentation level" href="/pubs/biopen.pdf">paper</a> on biometric systems.</p>
-			<p>Lately, I like to spend my free time reading papers/books, programming side projects in Rust, physical exercising or hiking.</p>
-			<p>To dig further, here are some links: <a href="https://twitter.com/federico_ponzi">Twitter</a>, <a rel="me" href="https://discuss.systems/@federicoponzi">Mastodon</a>, <a href="https://www.linkedin.com/in/federicoponzi/">Linkedin</a>, <a href="https://github.com/FedericoPonzi">Github</a></p>
-			<p>You can reach out via email using x@y where x is "me" and y is this domain.</p>
-			<p>Sometimes, I like to write articles for my <a href="https://blog.fponzi.me">blog</a>.
-		</article>
-	</body>
-</html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Federico Ponzi's Blog index</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap"
+          rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/9000.0.1/themes/prism.min.css"
+          integrity="sha512-/mZ1FHPkg6EKcxo0fKXF51ak6Cr2ocgDi5ytaTBjsQZIH/RNs6GF6+oId/vPe3eJB836T36nXwVh/WBl/cWT4w=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <link rel="stylesheet" href="res/styles.css">
+    <meta name="description"
+          content="Index of Federico Ponzi's blog. Federico Ponzi is a computer scientist and software engineer, writes about programming and systems.">
+    <meta name="keywords"
+          content="Federico Ponzi, computer science, distributed systems, operating systems, programming, software engineering">
+    <meta name="author" content="Federico Ponzi">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="Federico Ponzi's Home Page">
+    <meta property="og:description"
+          content="Federico Ponzi's home page on the internet">
+    <meta property="og:url" content="https://fponzi.me">
+    <meta property="og:image" content="https://fponzi.me/res/cover.jpg">
+    <link rel="alternate" type="application/rss+xml" title="Federico Ponzi Blog's RSS Feed" href="rss.xml"/>
+</head>
+<body>
+<div class="navbar">
+    <h1 class="navbar-title">Welcome!</h1>
+    <div class="navbar-links">
+        <a href="https://fponzi.me">Home</a>
+        <a href="https://blog.fponzi.me">Blog</a>
+    </div>
+</div>
+<div class="container">
+	<article>
+		<h2>You found <strong>Federico Ponzi</strong>'s home page!</h2>
+		<p>I'm a computer scientist and a software engineer interested in the intersection of Distributed Systems and Operating Systems.
+		<p>I currently work as a <strong>Software Development Engineer</strong> at <a href="https://aws.amazon.com/cloudfront/" title="AWS CloudFront">AWS CloudFront</a> on the <a href="https://docs.aws.amazon.com/AmazonCloudFront/latest/DeveloperGuide/HowCloudFrontWorks.html#CloudFrontRegionaledgecaches">Regional Edge Caches</a>. 
+		<p>These days, my favorite programming languages are Rust, Java, Python. As I try to use the best tool for the job, I also know other programming and scripting languages as well.</p>
+		<p>I hold a master degree in Computer Science. During my studies, I've also published a <a title="Biopen–Fusing password choice and biometric interaction at presentation level" href="/pubs/biopen.pdf">paper</a> on biometric systems.</p>
+		<p>Lately, I like to spend my free time reading papers/books, programming side projects in Rust, physical exercising or hiking.</p>
+		<p>To dig further, here are some links: <a href="https://twitter.com/federico_ponzi">Twitter</a>, <a rel="me" href="https://discuss.systems/@federicoponzi">Mastodon</a>, <a href="https://www.linkedin.com/in/federicoponzi/">Linkedin</a>, <a href="https://github.com/FedericoPonzi">Github</a></p>
+		<p>You can reach out via email using x@y where x is "me" and y is this domain.</p>
+		<p>Sometimes, I like to write articles for my <a href="https://blog.fponzi.me">blog</a>.
+	</article>
+</div>
 
+<footer class="footer">
+    <p>&copy; 2023 Federico Ponzi. The opinions expressed here do not represent the views of my current or past
+        employers.
+    <p>
+    <p>This website was generated with <a href="https://github.com/FedericoPonzi/genereto">Genereto</a>.</p>
+</footer>
+</body>
+</html>
